--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -14,7 +14,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.production
+      dockerfile: Dockerfile  # Use the working development Dockerfile
     ports:
       - "3001:3000"  # Changed to 3001 to avoid conflicts
     depends_on:
