--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -14,9 +14,9 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile  # Use the working development Dockerfile
+      dockerfile: Dockerfile.alpine  # Use Alpine-based Dockerfile
     ports:
-      - "3001:3000"  # Changed to 3001 to avoid conflicts
+      - "3001:3000"
     depends_on:
       - db
     environment:
